--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>IRCSCSE</title>
+    <title>ircSCSE</title>
 
     <!-- favicon -->
     <!-- <link href="favicon.png" rel=icon> -->
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt=""></a> -->
-                    <a class="navbar-brand page-scroll" href="#page-top"><p class="navbarLogoRow"><img src="img/conlogo6.png" style="height: 40px;">IRCSCSE</p></a>
+                    <a class="navbar-brand page-scroll" href="#page-top"><p class="navbarLogoRow"><img src="img/conlogo6.png" style="height: 40px;">ircSCSE</p></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,7 +80,8 @@
             <div class="event-date">MARCH 29, 2018, COLOMBO</div>
             <h1>International Research Conference on Smart Computing and Systems Engineering</h1>
             <p class="lead">Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
-            <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMISSION</button>
+            <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMISSION</button> -->
+            <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a>
         </div>
     </div>
     <!-- .Jumbotron-->
@@ -94,7 +95,7 @@
                         Welcome to the first international conference in smart computing and systems engineering (ICSCSE) organized by the Department of Industrial Management, Faculty of Science, University of Kelaniya, Sri Lanka, which will be held on the 29th of March 2018 in Colombo, Sri Lanka.
                     </p>
                     <p class="lead ircscseTextJustify">
-                        The primary objective of the SCSE conference is to create a platform for research scholars, academia, researchers and industry experts to present their research in the areas of Smart Computing and Systems Engineering. The conference encourages submissions covering both theoretical and application aspects in these areas and in interdisciplinary areas. The colloquium will provide the delegates with a forum to discuss the most recent innovations and trends, as well as practical challenges encountered, solutions adopted, and network and build collaborations with fellow researchers from across the world.
+                        The primary objective of the SCSE conference is to create a platform for research scholars, academia, researchers and industry experts to present their research in the areas of Smart Computing and Systems Engineering. The conference encourages submissions covering both theoretical and application aspects in these areas and in interdisciplinary areas. The colloquium will provide the delegates with a forum to discuss the most recent innovations and trends, as well as practical challenges encountered in industrial and services sectors, solutions adopted, and network and build collaborations with fellow researchers from across the world.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -232,10 +233,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/ProfSRDKalingamudali.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Prof. S R D Kalingamudali
-                                <small>University of Kelaniya, Sri Lanka</small>
+                            <h3>Dr. J.A. Jeewanie
+                                <small>University of Ruhuna, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -366,14 +367,14 @@
                 <div class="col-sm-6">
                     <div class="pricing-table-default text-center">
                         <div class="pricing-head">
-                            <h3>Early-bird PASS</h3>
+                            <h3>Early Bird</h3>
                             <!-- <span class="price"><sup>$</sup>100</span> -->
                         </div>
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i">
                                 <li>Local LKR 1000</li>
-                                <li>SAARC US$85</li>
-                                <li>Other US$100</li>
+                                <li>SAARC US$ 50</li>
+                                <li>Other Countries US$ 100</li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
@@ -385,14 +386,14 @@
                 <div class="col-sm-6">
                     <div class="pricing-table-default text-center">
                         <div class="pricing-head">
-                            <h3>Normal Pass</h3>
+                            <h3>Other</h3>
                             <!-- <span class="price"><sup>$</sup>150</span> -->
                         </div>
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i">
-                                <li>Local LKR 1500</li>
-                                <li>SAARC US$125</li>
-                                <li>Other US$150</li>
+                                <li>Local LKR 1000</li>
+                                <li>SAARC US$ 85</li>
+                                <li>Other Countries US$ 100</li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
@@ -460,7 +461,7 @@
     </section> -->
 
     <!-- Submission Guidelines -->
-    <section id="submission-guidelines" class="section-wrapper section-ajenda">
+    <!-- <section id="submission-guidelines" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -488,13 +489,11 @@
                             </span>    
                         </h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>Abstract Title</time>
                         <h3><b>Bold</b>, with maximum of 2 lines, 11 point, Times New Roman, center aligned, only first letter of the title is UPPER CASE (except where it is a proper noun)</h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>Authors</time>
@@ -503,7 +502,6 @@
                         <h3>The corresponding author should be indicated by using an asterisk (*)</h3>
                         <h3>The e-mail address of the corresponding author should be given in a new line after the names in <i>italics</i></h3>
                     </div>
-                    <!-- .session -->
 
                 </div>
                 <div class="col-md-6">
@@ -511,7 +509,6 @@
                         <time>Abstract</time>
                         <h3>Provide up to a maximum of five keywords Only the word “<b>Keyword:</b>” should be bold</h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>Abstract Body</time>
@@ -527,12 +524,10 @@
                         <h3>Technical terms, symbols etc. should be presented according to appropriate standards</h3>
                         <h3>Abbreviations should be defined at the first time it appears</h3>
                     </div>
-                    <!-- .session -->
 
                 </div>
             </div>
 
-            <!-- Presentation Guidelines -->
             <div class="row">
                 <center><p>The following format is provided as a guideline to present your work.</p></center>
 
@@ -540,63 +535,80 @@
                     <div class="session">
                         <time>Introduction</time>
                         <h3 class="ircscseTextJustify">
-                            <!-- <span> -->
                                 Shall start immediately after the Abstract, as the next paragraph. This section should provide a brief overview of the problem and the context of the study and should lead the reader to the importance of the study; tie-up published literature with the aims of the study and clearly states the rationale behind the investigation
-                            <!-- </span> -->
                         </h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>Methodology</time>
                         <h3 class="ircscseTextJustify">
-                            <!-- <span> -->
                                 The conceptual framework and the methodology followed will be presented. If the framework is based on previous work or changes done to an existing framework, this should be clearly set out and explained. Trivial details may be avoided. New methods or substantially modified methods may be described in sufficient detail. The statistical method and the level of significance chosen shall be clearly stated
-                            <!-- </span> -->
                         </h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>Results</time>
                         <h3 class="ircscseTextJustify">
-                            <!-- <span> -->
                                 All findings presented in tabular or graphical form shall be described in this section. The data should be statistically analyzed and the level of significance stated. Data that is not statistically significant need only to be mentioned in the text – no illustration is necessary. All Tables and figures must have a title or caption and a legend to make them self-explanatory
-                            <!-- </span> -->
                         </h3>
                     </div>
-                    <!-- .session -->
 
                 </div>
                 <div class="col-md-6">
                     <div class="session">
                         <time>Conclusion</time>
                         <h3 class="ircscseTextJustify">
-                            <!-- <span> -->
                                 This section deals with the interpretation of results, and helps to answer the research question(s) that were posed initially. The explanation should help to convey how the study help to increase current understanding of the problem and should be logical. Unsupported hypothesis should be avoided. The discussion should state where the results could be used and in what context where applicable. It could also mention unexpected possibilities the results uncovered and areas that could be further explored
-                            <!-- </span> -->
                         </h3>
                     </div>
-                    <!-- .session -->
 
                     <div class="session">
                         <time>References</time>
                         <h3 class="ircscseTextJustify">
-                            <!-- <span> -->
                                 Reference should be used very selectively given the restriction on number of pages. Use standard APA referencing style
-                            <!-- </span> -->
                         </h3>
                     </div>
-                    <!-- .session -->
 
                 </div>
             </div>
             <center>
-                <!-- <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.docx" target="_blank" class="btn btn-lg btn-outline-dark">DOWNLOAD</a> -->
                 <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.pdf" target="_blank" class="btn btn-lg btn-outline-dark">DOWNLOAD</a>
             </center>
         </div>
 
+    </section> -->
+
+
+    <section id="organiziners" class="section-wrapper section-ajenda">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
+                        <h1>ORGANIZING COMMITTEE</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="session">
+                        <h3>Dr. P.L.S. Peter<span>suren@kln.ac.lk</span></h3>
+                        <h3>Dr. R.A.C.P Rajapakshe<span>chathura@kln.ac.lk</span></h3>
+                        <h3>Dr. D.N Wickramarachchi<span>dilani@kln.ac.lk</span></h3>
+                        <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
+                        <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="session">
+                        <h3>Mr. Buddhika Jayawardena<span>buddhikaj@kln.ac.lk</span></h3>
+                        <h3>Mr. Nirmala Liyanaarachchi<span>nirmala@kln.ac.lk</span></h3>
+                        <h3>Ms. Kasuni Vidanagamachchi<span>kasuniv@kln.ac.lk</span></h3>
+                        <h3>Mr. Bhanu Watawana<span>bhanu@kln.ac.lk</span></h3>
+                        <h3>Ms W.M.Samanthi Weerabahu<span>samanthiw@kln.ac.lk</span></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
@@ -679,7 +691,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; IRCSCSE. All rights reserved | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; ircSCSE. All rights reserved | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
