--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <li><a class="page-scroll" href="#section-pricing">Ticket</a></li>
-                        <li><a id="navbarSubmission" class="page-scroll" href="#submission-guidelines">Submission</a></li>
+                        <li><a id="navbarSubmission" class="page-scroll" href="#organiziners">Organizers</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
                     </ul>
                 </div>
