--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li><a class="page-scroll" href="#section-intro">About</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
-                        <li><a class="page-scroll" href="#section-pricing">Ticket</a></li>
+                        <li><a class="page-scroll" href="#section-pricing">Registration</a></li>
                         <li><a id="navbarSubmission" class="page-scroll" href="#organiziners">Organizers</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
                     </ul>
@@ -78,7 +78,7 @@
     <div class="jumbotron text-center">
         <div class="content">
             <div class="event-date">MARCH 29, 2018, COLOMBO</div>
-            <h1>International Research Conference on Smart Computing and Systems Engineering</h1>
+            <h1>International Research Conference on<br>Smart Computing and Systems Engineering</h1>
             <p class="lead">Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMISSION</button> -->
             <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a>
@@ -358,7 +358,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>BUY TICKET</h1>
+                        <h1>REGISTRATION</h1>
                         <p>Call +94(0)11 2903282-5 or email to im@kln.ac.lk </p>
                     </div>
                 </div>
