--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                     <p><center>
                         <!-- <strong>Important Dates</strong><br> -->
                         <div class="importantDateColItem"><strong>Submission of Abstracts</strong><br>
-                        18th January 2018<br></div>
+                        25th January 2018<br></div>
                         <div class="importantDateColItem"><strong>Notification of Acceptance</strong><br>
-                        10th February 2018<br></div>
+                        15th February 2018<br></div>
                         <div class="importantDateColItem"><strong>Final paper Submission</strong><br>
-                        24th February 2018<br></div>
-                        <div class="importantDateColItem"><strong>Early-bird Registration</strong><br>
                         1st March 2018<br></div>
+                        <div class="importantDateColItem"><strong>Early-bird Registration</strong><br>
+                        7th March 2018<br></div>
                         <div class="importantDateColItem"><strong>Conference</strong><br>
                         29th March 2018</div>
                         </center>
@@ -359,7 +359,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>REGISTRATION</h1>
-                        <p>Call +94(0)11 2903282-5 or email to im@kln.ac.lk </p>
+                        <p>Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</p>
                     </div>
                 </div>
             </div>
