--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             <ul class="pricing-list pink-i">
                                 <li>Local LKR 1000</li>
                                 <li>SAARC US$ 50</li>
-                                <li>Other Countries US$ 100</li>
+                                <li>Other Countries US$ 75</li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
@@ -386,14 +386,14 @@
                 <div class="col-sm-6">
                     <div class="pricing-table-default text-center">
                         <div class="pricing-head">
-                            <h3>Other</h3>
+                            <h3>Regular</h3>
                             <!-- <span class="price"><sup>$</sup>150</span> -->
                         </div>
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i">
-                                <li>Local LKR 1000</li>
+                                <li>Local LKR 1500</li>
                                 <li>SAARC US$ 85</li>
-                                <li>Other Countries US$ 100</li>
+                                <li>Other Countries US$ 125</li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
