--- a/index.html
+++ b/index.html
@@ -667,20 +667,41 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="session">
+                        <time>Chair</time>
+                            <div class="orgComMemPicture">
+                                <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                            </div>
+                            
                         <h3>Dr. P.L.S. Peter<span>suren@kln.ac.lk</span></h3>
-                        <h3>Dr. R.A.C.P Rajapakshe<span>chathura@kln.ac.lk</span></h3>
-                        <h3>Dr. D.N Wickramarachchi<span>dilani@kln.ac.lk</span></h3>
-                        <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
-                        <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="session">
+                        <time>Secretary</time>
+                            <div class="orgComMemPicture"> 
+                                <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                            </div>
+                        <h3>Ms W.M.Samanthi Weerabahu<span>samanthiw@kln.ac.lk</span></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="session">
+                        <time>Co-Chairs</time>
+                        <h3>Dr. R.A.C.P Rajapakshe<span>chathura@kln.ac.lk</span></h3>
+                        <h3>Dr. D.N Wickramarachchi<span>dilani@kln.ac.lk</span></h3>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="session">
+                        <time>Members</time>
+                        <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
+                        <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
                         <h3>Mr. Buddhika Jayawardena<span>buddhikaj@kln.ac.lk</span></h3>
                         <h3>Mr. Nirmala Liyanaarachchi<span>nirmala@kln.ac.lk</span></h3>
                         <h3>Ms. Kasuni Vidanagamachchi<span>kasuniv@kln.ac.lk</span></h3>
                         <h3>Mr. Bhanu Watawana<span>bhanu@kln.ac.lk</span></h3>
-                        <h3>Ms W.M.Samanthi Weerabahu<span>samanthiw@kln.ac.lk</span></h3>
                     </div>
                 </div>
             </div>
