Added Committee Members,Chair and change font size for Topic

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div class="jumbotron text-center">
         <div class="content">
             <div class="event-date">MARCH 29, 2018, COLOMBO</div>
-            <h1>International Research Conference on<br>Smart Computing and Systems Engineering</h1>
-            <p class="lead">Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
+            <font size="50"><b>International Research Conference on<br><br>Smart Computing and Systems Engineering</b></font>
+            <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMISSION</button> -->
             <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a>
         </div>
@@ -288,10 +288,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrJulianNanayakkara.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>NEW USER
-                                <small>University of Moratuwa, Sri Lanka</small>
+                            <h3>Dr. L.D.J.F. Nanayakkara
+                                <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -307,10 +307,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrJanakaWijenayaka.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>NEW USER
-                                <small>University of Moratuwa, Sri Lanka</small>
+                            <h3>Dr. W.M.J Wijayanayake
+                                <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -326,10 +326,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrNiroshinie Fernando.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>NEW USER
-                                <small>University of Moratuwa, Sri Lanka</small>
+                            <h3>Dr. Niroshinie Fernando
+                                <small>Deakin University,Australia</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -345,10 +345,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>NEW USER
-                                <small>University of Moratuwa, Sri Lanka</small>
+                            <h3>Dr. Lalith Goonatilake
+                                <small>Aston University,Austria </small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -669,7 +669,7 @@
                     <div class="session">
                         <time>Chair</time>
                             <div class="orgComMemPicture">
-                                <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                                <a href="#"><img src="img/DrSurenPeter.jpg" class="img-responsive" alt="Image"></a>
                             </div>
                             
                         <h3>Dr. P.L.S. Peter<span>suren@kln.ac.lk</span></h3>
@@ -679,7 +679,7 @@
                     <div class="session">
                         <time>Secretary</time>
                             <div class="orgComMemPicture"> 
-                                <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
+                                <a href="#"><img src="img/MsSamanthiWeerabahu.jpg" class="img-responsive" alt="Image"></a>
                             </div>
                         <h3>Ms W.M.Samanthi Weerabahu<span>samanthiw@kln.ac.lk</span></h3>
                     </div>
