--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <font size="50"><b>International Research Conference on<br><br>Smart Computing and Systems Engineering</b></font>
             <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMISSION</button> -->
-            <a href="res/IRCSCSE%20Guidelines%20for%20abstract%20submission%20-%20Ver%202.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a>
+            <a href="res/IRCSCSE Guidelines for abstract submission - Ver 2.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a>
         </div>
     </div>
     <!-- .Jumbotron-->
@@ -233,28 +233,11 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. J.A. Jeewanie
-                                <small>University of Ruhuna, Sri Lanka</small>
-                            </h3>
-                            <!-- <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul> -->
-                        </figcaption>
-                    </figure>
-                </div>
-                <!-- /.col-sm-6 -->
-
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
-                        <a href="#"><img src="img/DrSachinthaPitigala.jpg" class="img-responsive" alt="Image"></a>
-                        <figcaption class="caption text-center">
-                            <h3>Dr. Sachintha Pitigala
-                                <small>University of Kelaniya, Sri Lanka</small>
+                            <h3>Dr. Lalith Goonatilake
+                                <small>Aston University,Austria </small>
+                                <small>Former Director,UNIDO</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -271,8 +254,26 @@
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. Lochandaka Ranatunge
+                               <h3>Dr. Lochandaka Ranatunge
                                 <small>University of Moratuwa, Sri Lanka</small>
+                            </h3>
+                            <!-- <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            </ul> -->
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Dr. J.A. Jeewanie
+                                <small>University of Ruhuna, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -309,8 +310,8 @@
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJanakaWijenayaka.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. W.M.J Wijayanayake
-                                <small>University of Kelaniya, Sri Lanka</small>
+                            <h3>Dr. W.M.J Wijayanayake 
+                                <small>University of Kelaniya, Sri Lanka </small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -345,10 +346,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrSachinthaPitigala.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. Lalith Goonatilake
-                                <small>Aston University,Austria </small>
+                            <h3>Dr. Sachintha Pitigala
+                                <small>University of Kelaniya, Sri Lanka </small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -667,7 +668,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="session">
-                        <time>Chair</time>
+                        <time><b>Conference Chair</b></time>
                             <div class="orgComMemPicture">
                                 <a href="#"><img src="img/DrSurenPeter.jpg" class="img-responsive" alt="Image"></a>
                             </div>
@@ -677,7 +678,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="session">
-                        <time>Secretary</time>
+                        <time><b>Conference Secretary</b></time>
                             <div class="orgComMemPicture"> 
                                 <a href="#"><img src="img/MsSamanthiWeerabahu.jpg" class="img-responsive" alt="Image"></a>
                             </div>
@@ -688,14 +689,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="session">
-                        <time>Co-Chairs</time>
+                        <time><b>Conference Co-Chairs</b></time>
                         <h3>Dr. R.A.C.P Rajapakshe<span>chathura@kln.ac.lk</span></h3>
                         <h3>Dr. D.N Wickramarachchi<span>dilani@kln.ac.lk</span></h3>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="session">
-                        <time>Members</time>
+                        <time><b>Members</b></time>
                         <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
                         <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
                         <h3>Mr. Buddhika Jayawardena<span>buddhikaj@kln.ac.lk</span></h3>
