--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
     </section>
     <!-- .team -->
 
-    <section id="section-ajenda" class="section-wrapper section-ajenda">
+    <section id="section-ajenda" class="section-wrapper section-ajenda" >
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>CONTENT</h1>
-                        <p>
+                        <p  style="color: black">
                             The conference will be operated with two tracks; the Smart Computing track and the Industrial and Systems Engineering track. The conference solicits papers addressing original research from the following areas.
                         </p>
                     </div>
@@ -436,7 +436,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>REGISTRATION</h1>
-                        <p>Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</p>
+                        <p style="color: black">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</p>
                     </div>
                 </div>
             </div>
@@ -718,7 +718,7 @@
                         <h1>DEPARTMENT OF INDUSTRIAL MANAGEMENT</h1>
 <!--                         <div class="row"> -->
                             <div class="col-md-6">
-                                <p class="ircscseTextJustify">
+                                <p class="ircscseTextJustify" style="color: black">
                                     <br>
                                     Department of Industrial Management<br>
                                     Faculty of Science<br>
@@ -732,7 +732,7 @@
                             </div>
                             <!-- <div class="col-md-12"> -->
                             <div class="col-md-6"></div>
-                                    <p class="ircscseTextJustify">
+                                    <p class="ircscseTextJustify" style="color: black">
                                         <br>
                                         Centre of Excellence in Management and Information Technology<br>
                                         <br>
